--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta
             name="description"
-            content="Transform Google Sheets into a card-based record viewer. Browse spreadsheet rows one at a time with a clean, mobile-friendly interface."
+            content="Transpose Google Sheets into a card-based record viewer. Browse spreadsheet rows one at a time with a clean, mobile-friendly interface."
         />
         <title>Google Sheet Transposer and Viewer</title>
         <style>
